// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ActiveUsers - Snapshots > matches snapshot when empty 1`] = `
<div
  class="flex w-full min-w-0 flex-col gap-2"
  data-testid="active-users"
>
  <div
    class="flex w-full items-center justify-between"
    data-testid="container"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Active users
    </h2>
  </div>
  <div
    class="flex w-full min-w-0 flex-col gap-2"
    data-testid="container"
  >
    <p
      class="text-base font-light text-muted-foreground"
      data-testid="typography"
    >
      No users to show
    </p>
  </div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive cursor-pointer rounded-full border shadow-xs hover:text-white hover:bg-neutral-800 h-8 gap-1.5 px-3 has-[>svg]:px-2.5 w-full border-border bg-white/5 text-xs font-bold"
    data-size="sm"
    data-slot="button"
    data-variant="dark-outline"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-users-round size-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 21a8 8 0 0 0-16 0"
      />
      <circle
        cx="10"
        cy="8"
        r="5"
      />
      <path
        d="M22 20c0-3.37-2-6.5-4-8a5 5 0 0 0-.45-8.3"
      />
    </svg>
    See all
  </button>
</div>
`;

exports[`ActiveUsers - Snapshots > matches snapshot when loading 1`] = `
<div
  class="flex w-full min-w-0 flex-col gap-2"
  data-testid="active-users"
>
  <div
    class="flex w-full items-center justify-between"
    data-testid="container"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Active users
    </h2>
  </div>
  <div
    class="flex w-full min-w-0 flex-col gap-2"
    data-testid="container"
  >
    <div
      class="flex w-full items-center gap-3"
      data-testid="user-list-item-skeleton-compact"
    >
      <div
        class="animate-pulse bg-muted size-10 shrink-0 rounded-full"
        data-slot="skeleton"
      />
      <div
        class="flex min-w-0 flex-1 flex-col gap-2"
        data-testid="container"
      >
        <div
          class="animate-pulse bg-muted h-4 w-full max-w-[150px] rounded-md"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse bg-muted h-4 w-full max-w-[130px] rounded-md"
          data-slot="skeleton"
        />
      </div>
    </div>
    <div
      class="flex w-full items-center gap-3"
      data-testid="user-list-item-skeleton-compact"
    >
      <div
        class="animate-pulse bg-muted size-10 shrink-0 rounded-full"
        data-slot="skeleton"
      />
      <div
        class="flex min-w-0 flex-1 flex-col gap-2"
        data-testid="container"
      >
        <div
          class="animate-pulse bg-muted h-4 w-full max-w-[150px] rounded-md"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse bg-muted h-4 w-full max-w-[130px] rounded-md"
          data-slot="skeleton"
        />
      </div>
    </div>
    <div
      class="flex w-full items-center gap-3"
      data-testid="user-list-item-skeleton-compact"
    >
      <div
        class="animate-pulse bg-muted size-10 shrink-0 rounded-full"
        data-slot="skeleton"
      />
      <div
        class="flex min-w-0 flex-1 flex-col gap-2"
        data-testid="container"
      >
        <div
          class="animate-pulse bg-muted h-4 w-full max-w-[150px] rounded-md"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse bg-muted h-4 w-full max-w-[130px] rounded-md"
          data-slot="skeleton"
        />
      </div>
    </div>
  </div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive cursor-pointer rounded-full border shadow-xs hover:text-white hover:bg-neutral-800 h-8 gap-1.5 px-3 has-[>svg]:px-2.5 w-full border-border bg-white/5 text-xs font-bold"
    data-size="sm"
    data-slot="button"
    data-variant="dark-outline"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-users-round size-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 21a8 8 0 0 0-16 0"
      />
      <circle
        cx="10"
        cy="8"
        r="5"
      />
      <path
        d="M22 20c0-3.37-2-6.5-4-8a5 5 0 0 0-.45-8.3"
      />
    </svg>
    See all
  </button>
</div>
`;

exports[`ActiveUsers - Snapshots > matches snapshot with users 1`] = `
<div
  class="flex w-full min-w-0 flex-col gap-2"
  data-testid="active-users"
>
  <div
    class="flex w-full items-center justify-between"
    data-testid="container"
  >
    <h2
      class="text-2xl font-light text-muted-foreground"
      data-testid="heading-2"
    >
      Active users
    </h2>
  </div>
  <div
    class="flex w-full min-w-0 flex-col gap-2"
    data-testid="container"
  >
    <div
      class="flex w-full items-center gap-2"
      data-testid="user-list-item-user-1"
    >
      <button
        aria-label="View User One's profile"
        class="flex min-w-0 flex-1 cursor-pointer items-center gap-2 text-left transition-opacity hover:opacity-80"
        data-slot="button"
      >
        <span
          class="relative flex overflow-hidden rounded-full h-8 w-8 shrink-0"
        >
          <span
            class="flex h-full w-full items-center justify-center rounded-full border border-muted-foreground bg-muted overflow-hidden border-none"
          >
            <div
              class="facehash h-full w-full rounded-full text-background"
              data-facehash=""
              data-interactive="true"
              style="width: 100%; height: 100%; position: relative; display: flex; align-items: center; justify-content: center; overflow: hidden; container-type: size; perspective: 300px; transform-style: preserve-3d; background-color: rgb(252, 0, 255);"
            >
              <div
                data-facehash-gradient=""
                style="position: absolute; inset: 0px; pointer-events: none; z-index: 1; background: radial-gradient(100% 100% at 50% 50%, rgba(255, 255, 255, 0.15) 0%, transparent 60%);"
              />
              <div
                data-facehash-face=""
                style="position: absolute; inset: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 2; transform: rotateX(-15deg) rotateY(15deg) translateZ(12px); transform-style: preserve-3d; transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  style="width: 60%; height: auto; max-width: 90%; max-height: 40%;"
                  viewBox="0 0 71 23"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    style="animation: facehash-blink 3.5s ease-in-out 1.5s infinite; transform-origin: center center;"
                  >
                    <rect
                      fill="currentColor"
                      height="23"
                      rx="3.5"
                      width="7"
                      x="8"
                      y="0"
                    />
                    <rect
                      fill="currentColor"
                      height="7"
                      rx="3.5"
                      width="23"
                      x="0"
                      y="8"
                    />
                  </g>
                  <g
                    style="animation: facehash-blink 3.5s ease-in-out 1.5s infinite; transform-origin: center center;"
                  >
                    <rect
                      fill="currentColor"
                      height="23"
                      rx="3.5"
                      width="7"
                      x="55.2"
                      y="0"
                    />
                    <rect
                      fill="currentColor"
                      height="7"
                      rx="3.5"
                      width="23"
                      x="47.3"
                      y="8"
                    />
                  </g>
                </svg>
                <div
                  data-facehash-mouth=""
                  style="margin-top: 8%; display: flex; align-items: center; justify-content: center;"
                >
                  <span
                    data-testid="avatar-fallback-initial"
                    style="font-size: 26cqw; line-height: 1;"
                  >
                    U
                  </span>
                </div>
              </div>
            </div>
          </span>
        </span>
        <div
          class="flex min-w-0 flex-1 flex-col"
          data-testid="container"
        >
          <span
            class="truncate text-sm font-bold text-foreground"
            data-testid="typography"
          >
            User One
          </span>
          <div
            class="flex items-center gap-3 text-xs font-medium tracking-[1.2px] text-muted-foreground"
            data-testid="container"
          >
            <div
              class="flex items-center gap-1"
              data-testid="container"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-tag size-3"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
                />
                <circle
                  cx="7.5"
                  cy="7.5"
                  fill="currentColor"
                  r=".5"
                />
              </svg>
              <span
                data-testid="typography"
              >
                0
              </span>
            </div>
            <div
              class="flex items-center gap-1"
              data-testid="container"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-sticky-note size-3"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 9a2.4 2.4 0 0 0-.706-1.706l-3.588-3.588A2.4 2.4 0 0 0 15 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2z"
                />
                <path
                  d="M15 3v5a1 1 0 0 0 1 1h5"
                />
              </svg>
              <span
                data-testid="typography"
              >
                0
              </span>
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="Follow User One"
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer border shadow-xs bg-secondary text-secondary-foreground hover:bg-accent group size-8 shrink-0 rounded-full"
        data-cy="user-list-item-follow-toggle-btn"
        data-size="icon"
        data-slot="button"
        data-variant="secondary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user-round-plus size-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 21a8 8 0 0 1 13.292-6"
          />
          <circle
            cx="10"
            cy="8"
            r="5"
          />
          <path
            d="M19 16v6"
          />
          <path
            d="M22 19h-6"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex w-full items-center gap-2"
      data-testid="user-list-item-user-2"
    >
      <button
        aria-label="View User Two's profile"
        class="flex min-w-0 flex-1 cursor-pointer items-center gap-2 text-left transition-opacity hover:opacity-80"
        data-slot="button"
      >
        <span
          class="relative flex overflow-hidden rounded-full h-8 w-8 shrink-0"
        >
          <span
            class="flex h-full w-full items-center justify-center rounded-full border border-muted-foreground bg-muted overflow-hidden border-none"
          >
            <div
              class="facehash h-full w-full rounded-full text-background"
              data-facehash=""
              data-interactive="true"
              style="width: 100%; height: 100%; position: relative; display: flex; align-items: center; justify-content: center; overflow: hidden; container-type: size; perspective: 300px; transform-style: preserve-3d; background-color: rgb(0, 75, 255);"
            >
              <div
                data-facehash-gradient=""
                style="position: absolute; inset: 0px; pointer-events: none; z-index: 1; background: radial-gradient(100% 100% at 50% 50%, rgba(255, 255, 255, 0.15) 0%, transparent 60%);"
              />
              <div
                data-facehash-face=""
                style="position: absolute; inset: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 2; transform: rotateX(15deg) rotateY(-15deg) translateZ(12px); transform-style: preserve-3d; transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
              >
                <svg
                  aria-hidden="true"
                  fill="none"
                  style="width: 60%; height: auto; max-width: 90%; max-height: 40%;"
                  viewBox="0 0 63 15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    style="animation: facehash-blink 4.4s ease-in-out 2.4s infinite; transform-origin: center center;"
                  >
                    <circle
                      cx="55.2"
                      cy="7.2"
                      fill="currentColor"
                      r="7.2"
                    />
                  </g>
                  <g
                    style="animation: facehash-blink 4.4s ease-in-out 2.4s infinite; transform-origin: center center;"
                  >
                    <circle
                      cx="7.2"
                      cy="7.2"
                      fill="currentColor"
                      r="7.2"
                    />
                  </g>
                </svg>
                <div
                  data-facehash-mouth=""
                  style="margin-top: 8%; display: flex; align-items: center; justify-content: center;"
                >
                  <span
                    data-testid="avatar-fallback-initial"
                    style="font-size: 26cqw; line-height: 1;"
                  >
                    U
                  </span>
                </div>
              </div>
            </div>
          </span>
        </span>
        <div
          class="flex min-w-0 flex-1 flex-col"
          data-testid="container"
        >
          <span
            class="truncate text-sm font-bold text-foreground"
            data-testid="typography"
          >
            User Two
          </span>
          <div
            class="flex items-center gap-3 text-xs font-medium tracking-[1.2px] text-muted-foreground"
            data-testid="container"
          >
            <div
              class="flex items-center gap-1"
              data-testid="container"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-tag size-3"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
                />
                <circle
                  cx="7.5"
                  cy="7.5"
                  fill="currentColor"
                  r=".5"
                />
              </svg>
              <span
                data-testid="typography"
              >
                0
              </span>
            </div>
            <div
              class="flex items-center gap-1"
              data-testid="container"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-sticky-note size-3"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 9a2.4 2.4 0 0 0-.706-1.706l-3.588-3.588A2.4 2.4 0 0 0 15 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2z"
                />
                <path
                  d="M15 3v5a1 1 0 0 0 1 1h5"
                />
              </svg>
              <span
                data-testid="typography"
              >
                0
              </span>
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="Unfollow User Two"
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer border shadow-xs bg-secondary text-secondary-foreground hover:bg-accent group size-8 shrink-0 rounded-full"
        data-cy="user-list-item-follow-toggle-btn"
        data-size="icon"
        data-slot="button"
        data-variant="secondary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-check size-5 group-hover:hidden"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 6 9 17l-5-5"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="lucide lucide-user-minus hidden size-5 group-hover:block"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
          <line
            x1="22"
            x2="16"
            y1="11"
            y2="11"
          />
        </svg>
      </button>
    </div>
  </div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive cursor-pointer rounded-full border shadow-xs hover:text-white hover:bg-neutral-800 h-8 gap-1.5 px-3 has-[>svg]:px-2.5 w-full border-border bg-white/5 text-xs font-bold"
    data-size="sm"
    data-slot="button"
    data-variant="dark-outline"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-users-round size-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 21a8 8 0 0 0-16 0"
      />
      <circle
        cx="10"
        cy="8"
        r="5"
      />
      <path
        d="M22 20c0-3.37-2-6.5-4-8a5 5 0 0 0-.45-8.3"
      />
    </svg>
    See all
  </button>
</div>
`;
